added new stuff

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
         <div class="mini-container">
             <h1>Send me an Email</h1>
             <div class="box">
-
+                <div class="input-div">
+                    <input type="text" name="name" placeholder="your name">
+                </div>
             </div>
         </div>
     </div>
