added more inputs

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
             <div class="box">
                 <div class="input-div">
                     <input type="text" name="name" placeholder="your name">
+                    <input type="text" name="name" placeholder="your email">
+                    <input type="text" name="name" placeholder="subject">
                 </div>
             </div>
         </div>
