--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
                     <input type="text" name="name" placeholder="your name">
                     <input type="text" name="name" placeholder="your email">
                     <input type="text" name="name" placeholder="subject">
+                    <textarea name="message" id="" cols="30" rows="10"
+                        placeholder="your message..."></textarea>
                 </div>
             </div>
         </div>
