--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +18,9 @@
                     <input type="text" name="name" placeholder="your name">
                     <input type="text" name="name" placeholder="your email">
                     <input type="text" name="name" placeholder="subject">
-                    <textarea name="message" id="" cols="30" rows="10"
-                        placeholder="your message..."></textarea>
+                    <textarea name="message" id="" cols="30" rows="9"
+                        placeholder="your message..."></textarea><br>
+                    <button>Submit</button>
                 </div>
             </div>
         </div>
