--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,14 @@
             <h1>Send me an Email</h1>
             <div class="box">
                 <div class="input-div">
-                    <input type="text" name="name" placeholder="your name">
-                    <input type="text" name="name" placeholder="your email">
-                    <input type="text" name="name" placeholder="subject">
-                    <textarea name="message" id="" cols="30" rows="9"
-                        placeholder="your message..."></textarea><br>
-                    <button>Submit</button>
+                    <form action="/send" method="POST">
+                        <input type="text" name="name" placeholder="your name">
+                        <input type="text" name="email" placeholder="your email">
+                        <input type="text" name="subject" placeholder="subject">
+                        <textarea name="message" id="" cols="30" rows="9"
+                            placeholder="your message..."></textarea><br>
+                        <button type="submit">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
